--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 					<div class="slider__layer" data-swiper-parallax="16%" style="background-image: url(img/screen-3/layer-front.png);"></div>
 		
 					<div class="projects-container">
+						<div class="project-card"><a href="https://fraggeronfire.github.io/future/">Future Tech</a></div>
+						<div class="project-card"><a href="https://fraggeronfire.github.io/stalker-page/">STALKER</a></div>
 						<div class="project-card"><a href="https://fraggeronfire.github.io/viking_github/index.html">Vikings</a></div>
 						<div class="project-card"><a href="https://fraggeronfire.github.io/cosmo">Cosmo</a></div>
 						<div class="project-card"><a href="https://fraggeronfire.github.io/car/">Car</a></div>
